# Core (I/O,Log) library
subdir('board')
subdir('core')
# gdb library
subdir('gdb')
# Math libraries
subdir('libfixmath')
subdir('matrix')
subdir('kalman')
# Flight Controller library
subdir('fc')
# Sensor libraries
subdir('ir')
subdir('sonar')
subdir('laser')
# Map library
subdir('map')
# Searching
subdir('search')
# Navigation library
subdir('nav')

# generate_avr_firmware(['main', 'BOARD', 'uno', 'SRCS', 'main.c', 'task.c', 'LIBS', 'core', 'fc', 'sonar', 'laser', 'ir', 'nav', 'search', 'kalman', 'matrix', 'map', 'libfixmath'])
