  #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
  source_files = 'main.c'
  # add_definitions('-DMOCK')
  # add_definitions('-D__AVR_ATmega328P__')
  map-sample_exe = executable('map-sample', SOURCE_FILES)
  # target_link_libraries(['map-sample', 'map', 'core'])
  #generate_avr_firmware(map-sample
  #        BOARD uno
  #        LIBS core map
  #        SRCS main.c)
