# I/O board library
add_subdirectory(io)

# Logging framework library
add_subdirectory(log)

# gdb library
add_subdirectory(gdb)

# Flight Controller library
add_subdirectory(fc)

# Sensor libraries
add_subdirectory(ir)
add_subdirectory(sonar)

# Datafusion library
add_subdirectory(datafusion)

# Kalman library
add_subdirectory(kalman)
add_subdirectory(single_kalman)

add_subdirectory(matrix_math)