  # Load defines with paths for firmwares compile in test_firmware
  # load_test_firmware_defines()
component_tests_exe = executable('component-tests', 
                                 'Main.cpp', 'io/IOTest.cpp',
                                 native: true)
  # add_test_dependencies('component-tests')
  # target_link_libraries(['component-tests', 'common', 'core', CPPUNIT_LIBRARIES])
