unit_tests_exe = executable('unit-tests', 
                            'Main.cpp', 'io/IOTest.cpp', 'sonar/SonarTest.cpp', 
                            'kalman/KalmanTest.cpp', 'kalman/KalmanDatafusionTest.cpp', 
                            'log/LogTest.cpp', 'matrix/MatrixTest.cpp', 'nav/NavTest.cpp',
                            native: true)
  # target_link_libraries(['unit-tests', 'common', 'core', 'sonar', 'kalman', 'matrix', 'laser', 'libfixmath', 'nav', CPPUNIT_LIBRARIES])
